Add runtime API URL config

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Flock Manager</title>
+    <script>
+      // Runtime API URL configuration
+      // This will be replaced by the Dockerfile startup script
+      window.API_URL = window.API_URL || 'REACT_APP_API_URL_PLACEHOLDER';
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
